Bug 1916682 - [devtools] Refactor cubic bezier widget layout. r=devtools-reviewers,ochameau.
Use a grid for the tooltip, driven by CSS variables that we retrieve in JS
to compute the canvas size.
Retrieve CSS variables for drawing in the canvas, and draw the diagonal
between the control points in the canvas too (instead as a background gradient).
Don't overlap the canvas and the animation easing preview as it could be
hard to discernate in High Contrast Mode.
Fix a couple issues with RTL languages.

Differential Revision: https://phabricator.services.mozilla.com/D227174

--- a/devtools/client/shared/widgets/linear-widget.css
+++ b/devtools/client/shared/widgets/linear-widget.css
@@ -63,4 +63,9 @@
   border-radius: 50%;
   border: 2px solid var(--timing-function-preview-dot-border);
   background: var(--timing-function-line-color);
+  /* We need to opt-out of forced color as --timing-function-line-color is
+     a registered color and gets computed to an rgb color which means the color
+     will be forced, even if the declaration value is a system color.
+     All the colors used here have High Contrast re-declaration so it should be fine */
+     forced-color-adjust: none;
 }
